--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
     "nanoid": "^3.1.20",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
